[project]
name = "caretoys-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "h5py>=3.16.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kymatio>=0.3.0",
    "mantis-tsfm>=1.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=1.5,<3.0",
    "peft>=0.19.1",
    "pywavelets>=1.9.0",
    "ruptures>=1.1.10",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "transformers>=4.50.0",
    "tqdm>=4.67.3",
    "tsfresh>=0.21.2",
    "umap-learn[plot]>=0.5.12",
    "vector-quantize-pytorch>=1.28.2",
    "xgboost>=3.2.0",
    "scienceplots>=2.2.1",
]
